--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,3 @@
 {
-  "endpoint": "http://localhost:3900/api",
-  "moviesRoute": "/movies",
-  "genresRoute": "/genres"
+  "endPointurl": "http://localhost:3900/api"
 }
